comment lines in cloudflareddns config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,38 +1,38 @@
-#ENC[AES256_GCM,data:1H951LuIM9lq4Zac78u5olbXI8d1EV1Z3183NV8kpyJkhPLNflUEj36loqsc4YYHN4EHf5FonR3fM97Tw5BTi00=,iv:uwNZQZ3ss3PfbwgFd9qZ//ExLAeoieTxNNagx3caEyQ=,tag:zYgZjRVW9zovX6dHg9qC6Q==,type:comment]
-#ENC[AES256_GCM,data:/SyAZPwu2sSHWEvzmfo8GGsN62G2Yw6nWQnecCGwF9WW77vZCnjngmO8Zxw=,iv:OKOCSDySLMTw2tX7p0kOwg1NPM4afs6qkH1MCahdkxU=,tag:suzKnp3clS+BCQlCnlrFyg==,type:comment]
-VIP: ENC[AES256_GCM,data:HE4z8vupYusYCTeCog==,iv:HfmEicUY4HCmopPTx6vBYIklKn4QKEBcm//7gF2J0Jk=,tag:rK3gCqqA14LfYXq+QN8eDg==,type:str]
-#ENC[AES256_GCM,data:wZIaYsk3E4cQXbx3CFpNgc0E0hN3zcN7QKMz,iv:E2DtlcXByVbjS6CtnDnEWPm3aqPJeKBFjEvndQMPMTc=,tag:C555xc9V5fYSWkc1ugyJ2Q==,type:comment]
-#ENC[AES256_GCM,data:lF2UuF5cmdRRMqttWPEjNfxIHoEz+KmD6kvx1jHugliggwel+3/5ztAcbVuQv4H85BJ8gNoZDhrSxsMiKlwQ6s3tMuCNt3SvrlUWKiJjCIk7Q5WBs++ubco=,iv:IE6e0EtHlULf4rU7BIY4D2tv24bmxqSG7PWwPHVkBu0=,tag:HoEBmucaH+clGfumpi2+wQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:aPQhhHTiKsdRn2d35R4=,iv:TH5+/oPlyt6USQ/4hvSC5Q8DHLnGluJ3skiX0gNlIwg=,tag:YtQr4FzwbJllCsKGvsaVQw==,type:str]
-#ENC[AES256_GCM,data:aN25pryS6uC2LaifWw1tNhfSmCEt11U2OyRtamqOvsEG5w==,iv:iVi9WafKewJP30DRa6Pz0K7PDERAA3k49pCGHxXDSCw=,tag:UA2Ex1qaucqGu+vRWtk8Xw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:d21LX0MMp9bMxF8Idg==,iv:zu+RKDw0nMyW0HvSjvH0cFhAEWijsRvzkaavvLqop2M=,tag:WaPQvrp3tMMuW8vKGcMEOQ==,type:str]
-#ENC[AES256_GCM,data:Ig+4lm+3RJSlZJtgnxEOXwjaFm2B1Bq/0xeRFwm+YKSgfBTz9WQMEuQXoDsqM2A=,iv:llIGNVH9gLGLXOhp4OPfHvHJxGs+IlZmhcG+exJK5lE=,tag:ccv80RtQNiUpgKu2h2s4Mw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:2Iut/pXAl0T5xNWIKv6+bWMNpxPRPzRN3gUrcstlMA==,iv:jLnASd+YNBhzlz5dFYbKF4xMB7UIMbHfjoUAYdi3bnc=,tag:p/JKPM5EKXYRxR7VLARc6Q==,type:str]
-#ENC[AES256_GCM,data:TvYkbaq0iwR3+x/usEfvgIeUAXujurr/UaLdoiRf8A28gA6qj15QLkDQw/9dilcSD24Bn3bsP9WaPSS6D8oR23GbRQ/50s3luEZTUtd7gn9f/g==,iv:iHgrrgW/CFXuakM/m06PeMaeVfLOwgKHS4MlNHa2aAs=,tag:okBAgo1n5FLYRMHjFdJfLw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Jfrv3fauz0qomtD16a1M,iv:/ZW7FP4Z9CtpWH6jVBkIZYYTfVOk+8iy/kuSp3MITho=,tag:Xn9F51vxqCHki/wl0fWPNA==,type:str]
-#ENC[AES256_GCM,data:irqu1SRBQdOrYNk1B4BtZWOhHecpYuxGbLEB6xoJ5DvA,iv:G6g0Wlsd99k0n/y6KT8zWUXaDxdDqVfXxNkP1rhDaL4=,tag:3CiZoRNJekA8Y4rDHX38Tw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:vQifx10WBAPmHJLqAFPV,iv:31CFW7ZbOp3Kehayk9gQ1u/ULwyDCzHJTSnwNXYxuAk=,tag:HFj9jWxjHvII9qyDJrB/mQ==,type:str]
-#ENC[AES256_GCM,data:flFVIgPQMjjLfachl3CoC0J735JmGqlZWvx/bAxBmzRsCGPKTgww8sa09QQdpiKvutEjrstYFWHaMtJv8HKouSkiZwPpFj/a8vzM+NNUOyQ=,iv:kYB9yaWwmjKUkygPo+HEO62/OuijmFpAEOuEd+M78rs=,tag:PdmTl8+l+/qIhxa0pkZLrQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:/O/LvKsD6XXxSjmiBGmv,iv:yMN/Rc0+dfjCUZCaP8XKkicpyYxMdg/MRADncPdnvaU=,tag:D/7u9kIt0vCDiQJ391fJ8g==,type:str]
-#ENC[AES256_GCM,data:iw0lkk1W/GjQAZ1unONkjOs3PYrS9R5lzyfKqfkU3vNBIqZ6Kd+rxS/3VVms+ipQMd8grlfFjhamE90kjDUWuaSjPow23GmpHafx7JCcrssy7KVbdrp9,iv:UiUGwjw6GZFE6qe6NS0RkBLnr8BbHucSvb50SCfJkGA=,tag:sHcMi8Chrr6IlhGy4qDBWQ==,type:comment]
-#ENC[AES256_GCM,data:mL+T9TKXZ4ugjktCllcucYVt9SWGDcz5XOtjFMF91gPOf9b8haFJm4EGzdUd+CeZ4iOW552AYesECxTD1uFfjIgqhgnqu6wnQiXTtSnCw9RBds23MUJCxWauR445eU3UUfHtveMbb8s86ejMLCtmJs4E/A6qghSGiKymtQ==,iv:gbXsGGazTC55yHAPmCoRv8YWajXmW58XGCS26ukt414=,tag:KPpyyvfh72Q3zgVRWeM9Jw==,type:comment]
-#ENC[AES256_GCM,data:ZuyCbS3nImKKAOa5/ASWR4/jlIQRsJ7W2MesOJ3fsJgXyB4ISBSLKk8GRNIw25Qldp4qcw4rkEvXsZisueWW644AipyFBy9IOX4XKbIPCRg=,iv:q/gMz03GIVDbfAS7C8lAeSDPyO3UjMkGVybhwroNP9Q=,tag:Mw/OjA0aKUv30eAEqy95cg==,type:comment]
-#ENC[AES256_GCM,data:WTi3en2uZ7iA05r8XN4OKmMn6t7iDp42LbcRGWYVtsSRup75nk8yDltsUcxBHswat+zJTrzw,iv:zfPHQrlt7jmK1yuFWj/AwNeVRlvI+gu9e/H0FLnSfUU=,tag:lRh1MFcDk6TcjcprPjJ82g==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:WQkKXetGw8LTK/CNrO0=,iv:jSUAeMLCz+oA0G4144/MyOQjPgSEiHXnLUn7iR9kyXI=,tag:JrThFxtI63LEKnYdFk5XnA==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:Y2TBPw5/Xvx8ucZH,iv:VZreRvrElRkzfTHc8XDRAcML1Mbsfe9eyAgJ+RhYhsU=,tag:jXtjoQFjyLHiI6SznAO3Yw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:NwYiaBD0LOcKLVOJ9C6hJZY=,iv:Ut5pByjPpt77CMpZtzG9/MEqPydb/yODombbj2MjDXk=,tag:+JAfNXMDUa+Kvj9ajN75Ig==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uj2IkzfuHPWGdSSyl2TeFUnCuxOOhfaPwlz5Pl58yISP234csGk0oQ==,iv:bceXBLcjlbnCIhs5x0HDRE9uvPFdlrzKXogVvVGxmts=,tag:5sGvDBRNUmQ+4Ymw/QwPWg==,type:str]
-#ENC[AES256_GCM,data:Qzg3x1ApeGbr/tpx3zdOaQC4E/pFbZ/OojZLmc6ASpp4HLrtKAtjQSM94ANi8U2mcwG+InVQ7o8=,iv:WwEvxpoBmwSJ+1oa87Tb3uZk4xcGrOAXRd/lG63sjOQ=,tag:WE0a+2UKM6jOtm7phU/xVA==,type:comment]
-#ENC[AES256_GCM,data:B5dc1ofzMwN3QTKRfocK7hhFauF0T0ybXg==,iv:srcNnpeYgEe16tIcGzddCceb3hSShpI6RD85sqislHk=,tag:YLszacP4HwhHYEQLxySxAw==,type:comment]
-#ENC[AES256_GCM,data:XSQCFf4dBsAV3xs+Sj8x08ORu9LOYv44gZX8IlAE2I80aggAA5kUW7rwAtO30Bmjd7+NFIVNByzaWulrcEoyy4yFjWZ38LGJBbjkEYA=,iv:jTYTLczb2neH60NcL7xl1nEm/tMpPournziyKCuikvE=,tag:qsFhTAoLRlreaZUWCOk8Og==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:ug6QTo4CTVvGVB4FducGHKi3IeOd/rVSyL44dqhghni0DGgbKvz8kd3y0Xct/OLt,iv:pfVITRy0r9dHI8BjDS//ZuX0MW9V/f0GCcLM/X6G84c=,tag:Szmfw+YqxQpgSD22qQrDsw==,type:str]
-#ENC[AES256_GCM,data:GqrZgFnmmDzTZcCFTx4F6+PH3P1nFZmkT4qHURgt/zD7S6H6/OHK4qUkZ3nJ5m/vJGuR/bKzVj/l0meErZQSDgF1mNy8Wus=,iv:JapQLgUhd/JcR1JGUZ1HAyveDpRbAzw3AyM/0CpIZTI=,tag:htIe3VfuwRWbf0ECrqWQ6A==,type:comment]
-#ENC[AES256_GCM,data:7GAdC7982u8UJai4ElKqVOEk1b7TmCVYjgiQChv322+tiG8VoaEahpRXpRpq6FgWugZ+1GiB,iv:UtHwRVl4WQwHwOp3lSTpckLuC4ziF97WT1S83zmdrAo=,tag:f26H3+JD7T+uPgYG6Cfryg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:uH4xq12QYw==,iv:+NKYR0LuesLwKo6oiB85/+TDUlW7JEd9GEPsdJjwkQI=,tag:3HcDZJlmao3MNekL0iZuJg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Rqdm8n9n9BLYaOVkp65S1mssCO8=,iv:/LDMCUsMdXQTllDf85Ehd7ni2xgpBNMlugd/NTr/jIA=,tag:4cM8zjnhXThYglTtxHb8qg==,type:str]
-#ENC[AES256_GCM,data:puD7GahntJyrGaOS+CI=,iv:eCmWq6hUAvd9WnPYhijkG0W68gb5jgn3oDSfDUOgKK8=,tag:hl5LYI73N1iw8V7wWbapyQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:lUWDB3w+nZS7I77YJw==,iv:saOQrCZAiPN6LOtcN2i4ggJCt2dTclHRy9eif+bz+2I=,tag:BfbAJ8Q6REpz6RuUeCdIiw==,type:str]
-SVCNET: ENC[AES256_GCM,data:+0JA3Epear2nNMMHwQ==,iv:/H8zwrI/MlVgAoBcht5EAtQozEK0JAm/wv17pq3I+dA=,tag:nCP0EPYwGJB3hkotXo4CWQ==,type:str]
+#ENC[AES256_GCM,data:l39zzeHM23qQdD7tXr6G96mjb2pC/cs0tZIIawY1qfdu5Cier6W92KWPKVqX0Y+R9i4w5cQkq8st0LMXJuTaDLA=,iv:eylB89hqm+zUOiBxoCUvpCR+CLMK7YfF/g+BXtGfFj8=,tag:ssJmr7q3pP3DIbiRtCKnVA==,type:comment]
+#ENC[AES256_GCM,data:p3euFevI5ABFBhyIjDZ/kLZiYXtrtinxYwyK/kKezO11cpuMiJu43/UpkJc=,iv:HilajWwJzHHPHsH8p9sRtCpRgV9qOPrh/05TYqVA0QM=,tag:TuHtQ795t4ZzwQNYp4zUJg==,type:comment]
+VIP: ENC[AES256_GCM,data:hLuLyE5LTcFf06iYWQ==,iv:LGdzn+Mw5+ES5vX6/lSbkTWsh2COaYd/JlNMFh3/swI=,tag:SU07WIy9X2z/zbbjW3KYDQ==,type:str]
+#ENC[AES256_GCM,data:RTRAfiDDCWPJpOs338jTWXSSFV7p8QajV/zl,iv:CBZcZ40tkDrDpHiVPSRliKK8APHHDTRFsxrFE1nccxM=,tag:Zppcg9GPAOzCd7AMkQi3AA==,type:comment]
+#ENC[AES256_GCM,data:0npu4TQ3Riw/L6Hu67x5rK61QB7rYEVDWEERBe3I319hcRkIEuigoDCqNS2uWpjmanGqe1PNEJK6SZ+uOBjQZbaV2c6p8d3dtyLnvzP4SZLeLNhkHiye5h8=,iv:i58rDMGzcUpeHkaDQcVZrW0rV3GUltPmemgf4Uz0LI0=,tag:QmN/BvRcaHNLj0sjOgh7uA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:qyE6wakRezoSSAH7pwM=,iv:ekAeCvzjqW4Q4JHhCMQ8rc86dVxwtbGxFI73lA4n+e4=,tag:jrpknJ93/N3lKvtmVgnw4w==,type:str]
+#ENC[AES256_GCM,data:eFeYijyUQS5YT7W9SU+YalbFQ4CBUZxHJ2R06UIrmcDADA==,iv:vo85GngQcXks00tH/A0n3dMzWNcfjXF7nx8JOJ0A4K0=,tag:Ikdlf7i4AWOHEwFJe+mIqQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:oXyqkureBF/pPo9sAg==,iv:ZcKTzZu9h7qrkHF1bqK78YQiFm1p608XUpCg+MTHntQ=,tag:IBLYW/TEVo2QB+p50gsncQ==,type:str]
+#ENC[AES256_GCM,data:KVuJnmRA0s3DspFxnNCbLqYbAHj+iJBFiOGDweg5UttMcYTl1aJrZnNl9J+HjSQ=,iv:odGBuRBXjq6mM3XTyW/PYt/U3bwP552cyLj0q8/a/no=,tag:ubzgZHhiyJ9T+pmdeOicog==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:UPgDhyPikTB9knvGRhT5lE3bHaYAEsNKssMDyQrJhQ==,iv:wCgIgxsU6oya0Vp0DGVZg7x9meqKKBFt3lTEWgsEpsQ=,tag:MMnGRI8RL4xKde0y7PfGeg==,type:str]
+#ENC[AES256_GCM,data:vS9urCTLoDGrAH4MAZarN2mUv6nSh6tuFbmTE7Oq2PUw9OMjYE02O/WcF/fbmZ/b8HiyEdPeZG2tSERUlqazmdOKfq2Ha92zSLKPGkaHlEAltg==,iv:b9XxTSi3fAhQhSdvV8HaWhXPbjsSogqIjBVsMoIB8UM=,tag:mdSgblyj3eYd+g/Nx3lf3A==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:zwZa3DlTgEcDylykM5K7,iv:qAcJMKqj3qUZHjz3bScfqlUv6JJWqSC/F8P1U6WyPaU=,tag:PWbwa5EgoOPLwafdg7zgnQ==,type:str]
+#ENC[AES256_GCM,data:yuVqb/rkI/S+OH1evzZFLBgylLL0k0zcbOrz4p7p8F0c,iv:2T4yPfv/VOzn+N/CGvgaN2pSiB4F5U/dM4K0DroFUnc=,tag:aS5bOG/FpZi6HQ/fvJWRVA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:vXeCAqubJdXUd66Y5SUy,iv:yuR4wibI+LVpXLuA1N2nkFStdFgqWb3rjPxoYzo/LLU=,tag:rh2cSic9Zh6bGKOK3pTHSw==,type:str]
+#ENC[AES256_GCM,data:Ethi70X0NTVKObGIAWhPcpBFW2jzOAjYBoghmODc+FrvwQV19nxIoLXy6H3ioWsYdNWoiz0uZCgSlqbLv819S+42YAw88pgQ/R4+f8yEOv4=,iv:MSMDLVh6gluxF1l9YUTfVqb9K6GSvm2BJTOc7S4XlmU=,tag:e7QgPX5/Mm1thVt2N1ZD4A==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:Zkqa7ZZ4huyduNRDkyzk,iv:NuIRCX0H7ygM2LGKwlks3JjLNZ3ITFAJXInYvbnrTtM=,tag:ne1znvU+QtsggxH64dzVfQ==,type:str]
+#ENC[AES256_GCM,data:q2AMutZIA8kJQKrW6Bd0NV1RXhei52h9l99ctvYR8glBeIofI658O+7k9milRbC+Rbn8xi6Uu8YjSkIayh9HRWO1AjorHWFgsqR6ySrc6umb2FRuJg2M,iv:GhROqraFPwx/PDjUnQiumsR2Y7YteLrVVcYKinPWu6Q=,tag:rkyJ+HIZoZFWU04rzkmgfQ==,type:comment]
+#ENC[AES256_GCM,data:b94TPRCA9ng43lqDY6CI7rVYojwfuQ108mmg94Xl6PCLx6YcgqnEoxJWFYyl33AjHWMzncEn5mwU1sFF0XrrGQCS1bcD/HgKxR9QGD/7jwEZKtaxA/JBwun7V+E2M8OHvjeRCSEmDYaVXhMZVwvTKGBBegvqwgQOjIJXig==,iv:a5sxPmRo8G3BaxGgj5BmTIrwe1ASPTSNGDyC6OKA81I=,tag:zJU8Ua+XTs2skIMnIeStjw==,type:comment]
+#ENC[AES256_GCM,data:R598hJ+VeDyodVxX/UIGlmpwSSS322IZ0y0a3rq96qRfcBXk+dOcRciLwYFwewLDEmOh56xy9uoiMODdSvDZtv8+NZgBLv3pGGP3Fn9U1rg=,iv:5+1ZjJqqQJl71+IWdzyYAcsj9zkwv4SENuTi/l21nQY=,tag:IdISGNMm0yZQWi71qfraTA==,type:comment]
+#ENC[AES256_GCM,data:heiaHForx1OzPXfUDgci6In4ZoFOANk0hncZ6prgEHxKL0AxoJhCrm60ncJ2rhcCASVRFC2M,iv:e7r6GLY5M/WEDqi3Ll9hUTGNvw1km7WDShwF1cTwF5A=,tag:61m+tVvuw077EWDRwii+7A==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:105CEZgz+zgEVH1Hw4A=,iv:BokOU6lu+0YxPbiKts7wDQy9aeQ9V2KyT9mXZcOQvXI=,tag:9H5Ys66fPOIwcMZFJ4R6Rw==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:sAncX5rhkUTkhfj+,iv:E4+jh1miGBr8H5HH/kIDmKxb2+QGfcSKPTJaWBBN7UE=,tag:650V86O3brDu7wYsG+0LQw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:TsY8pnKpOotCU/jkJcKne68=,iv:TRq7OwIT2oUsm7MR7g4YDkYCP9m1/4XN7J+tD5mQGV8=,tag:C3aKabnY8r3M5pxdBnEhYQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:4zIoqgk5MZAa+xtx7zWCXHDW9s73wKIKq0DV1PQABfkhe3nvUahZpw==,iv:T1VRBfj1bRXmqQpT+B+LPtLkhk6MvnpcSyA8er47sHM=,tag:IvEJzQ+CLN7+onNQCUeojA==,type:str]
+#ENC[AES256_GCM,data:upJ+tlR9s1QwvKZUlvlE8gkhTqWj60KKQPSXFvFDDjg2IIlg3fF0AIKvxtuveep1Jz1EzzS58WY=,iv:QisxeZ+jrLqd8/SBmaFzv+yHB9sFQ6TZYd7bNI/QiBQ=,tag:1qvt9q7BsHCq8DUCErjlFw==,type:comment]
+#ENC[AES256_GCM,data:xRel7N9wRLrRzL0H+tp+0dl39S8IeBKbzA==,iv:jzVHqM+0/1HSEVlT/fE34ZMeqY7jIoLw0bPSbk/aymI=,tag:xXJV6TvZ3N6TbGaD32LY5g==,type:comment]
+#ENC[AES256_GCM,data:VJxw87cP2npevhZ+w66P/X+8+UqlHBXUqMqbtZhWPlqsrRK4d7FN1+6iCUMSs4mP0eFCXGm4AataJa8EtZOKQRFgbTn+VRIXEPLrrfc=,iv:Ywz/Qmp9oCzQPbtDVW5wGPO50FrriANxAf2UInfP/2I=,tag:iEkzHdcTQdSqFWozrcUJkw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:vJqS6CCYZZk4trLpgS5QRFpjlrVV/uM/oBtlgNzYK65s+D3bm4OjbjL1plpMxqbs,iv:dw0RI3ZX0Yf/uJohiloDVMQSAlpsDPO78Pt8d4SP/jA=,tag:aKiCtIGBrDkh/qr5x1BGQw==,type:str]
+#ENC[AES256_GCM,data:PEVI5EKAtxxpArK1r3E6/pKajBP7ZajsGy9c19zfsN8YSiz1/3zzxlvbA45Ro8wCE5zMJcv21BFZx69BiVD4tQUu27OVNaY=,iv:b/ZXeb7abb/88Abgk295D5zck0Uc8ndWjSS78GeHQL0=,tag:t0SOV4S3/mNWkY8R2I7zPg==,type:comment]
+#ENC[AES256_GCM,data:RBB9tz39Z5CZN07QXV2BYVXKaXlPNgmw3F2a2VN1ynd5/IojFWDcWp+3sHQtk2hBwNiXW+AH,iv:EAEche6CyeTl9JhhR/HYh5Z02jjeAoNLje9umRoq3/Q=,tag:SpOgoXQRgX0zkQ3PE3W4TA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:QZBTdyovAw==,iv:6qWRIsiMbzwhqBZbw2XNekd3Mt2S05GKo/1BHl+LgVE=,tag:Q/9Uc8Jpfw77EVVXxVFFew==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:HBo2cir9EtyqL7329MXDvxvKebU=,iv:UC4A2S/A6rYiwwXc6JeomAxUxDaKYqfhqTzCJuOsDpo=,tag:BaM7J/As9Rvazqdc7dMObw==,type:str]
+#ENC[AES256_GCM,data:Qz0N+RXDslWhVEGF00w=,iv:l2Y3D8NK0RYHJTRtFiWyjPkGymaaX+tcLMR6QoUs2nY=,tag:2hqfbpVf7ahJtOagRL6YXA==,type:comment]
+PODNET: ENC[AES256_GCM,data:bJxHZjH6zJpFuhZPbQ==,iv:yNmc5lMxcYvNgjZF9a92azmJrrg1WJtKpw0lze8Lsmc=,tag:TjDzobuEgknelsikJDBPTw==,type:str]
+SVCNET: ENC[AES256_GCM,data:YRL0AeBjatcTIHAgcw==,iv:Nw3O1Xkpd8XpG6VDDzoTEGDgwIlJSOUdh4N0prS2+NE=,tag:YshTgouK2/oqpdSMPzmc7A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -43,13 +43,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYTzlsbDlxeUFyTEdmNlVa
-            L01SQzE3YTF4Vkcvd2JsbjAzbEpjeFdEZ3pzCkRSUHVjdlV2d3FWNWJNQncwamxh
-            MFhVSmdhdW9vVDhPM295WEFoYVlMVkkKLS0tIDh3MmlIc0VKL3ZEaHdxSHZ5VzJm
-            VGFucDkraHVLZnc1VnpDT1dzVUhmZk0KmVzyqI8M+5Kkl12Xa39Do8to5u4LiKDK
-            FPgQUryQcedTHvpCYySM/qwC2nbtxRwWWfE/AlwAKeb6o4sBQmM15Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMcG5BZGNnNHc3Q3BvVE9L
+            cEsraTBJVjIwSWc1dXZJNHJFMm5KN01iTUZNCnMrUm1zU25md1RENVcwTlgxYzFM
+            WC83ZG9GdFVPeEsyU0xramJaZUcxeFEKLS0tIG1DK3VwWjRMNTQzWWlnWHhsQ2lz
+            Y3Bxa0dTTWFrWXA5OTVseFRMY2dJN0EKkRoNnqN8pYoIaQtgTCYaBJanoV+iO1vi
+            eLrRgXhYpYnPC7eRWWTnl4fE9xBSXuqPQCiBM5ATt+vHqHi7erxrCw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T01:36:48Z"
-    mac: ENC[AES256_GCM,data:xkW9S7G8NVeVQTrKy3RXVKAAxKUhB5RXWckIeT0X/SoHv6de7HJ7g7rBDP8hwn4gnwxAGceOkkmUH1v9n1xHbdAHi0Alh44J9zzkmL1a0i5mV9s68nMnAYL8pQvxhwBwclIMT9KgXDWqfpP9izHgeQIO+d5qrO7SEESiVshZGqQ=,iv:ij+UYBHDNrAr3yZSGXc4EmsKs9EpLKAJZhotn370I04=,tag:1h5xYXTzzsSFZ5YnI6XG1w==,type:str]
+    lastmodified: "2024-12-27T15:08:00Z"
+    mac: ENC[AES256_GCM,data:YoZupLK+cEnaZU6fVfKfasXrPoMn99KgZni/1xhSH+N189QfxVpy0XudOk0duURQdnZPsm5SmZEuhwHU0nMqFpU8L6IgSSoJKu+YWZ0VL30WdnvhZ2UpCfiaCZuT9mbBQADkRsXdYKCVfjg4ht2ybjwt9w7KbPeq2CJMoMJrqKc=,iv:nBGsLFrCBccruR3o1SAgPfMqxf8elPXgHjBSJ+Rv6Po=,tag:jP5wm/K0a3wL3x/t9njLyg==,type:str]
     pgp: []
     version: 3.9.1
