--- a/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
@@ -32,10 +32,10 @@ spec:
     cloudflareddns:
       user: ${DOMAIN_0_EMAIL}
       api_token: ${DOMAIN_0_CLOUDFLARE_TOKEN}
-      interval: 300
-      detect_mode: dig-whoami.cloudflare
+      #interval: 300
+      #detect_mode: dig-whoami.cloudflare
       #detect_override: ""
-      log_level: 3
+      #log_level: 3
       host_zone_record:
         - domain: ${DDNS_URL}
           zone: ${DOMAIN_0}
