--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Idpe33N0UQptSH4dEKAaKAjsZF5+UwA9m4dN5qQLTda9Qjsa7rcaHchfdDtfhumJb/QiAPvraE/rGLfd4wjDgu0=,iv:ZjsV/oF+BcQBH0hFiTs18AEcnU0cFXTMFXff5oRQ8bY=,tag:HUPsDTgRe43s7hyQ2WoB1g==,type:comment]
-    #ENC[AES256_GCM,data:6LzRRxamCiauYhW0zcd6j3OnsYv2L4ahYmFPcwJalfFd5LGNyiSHp8UqiSI=,iv:ErUGjiwssonIFBdNE7Y9TDRnOFOoLlZua5bjJiR2JMM=,tag:Se1+01ltAfB52jZmMCwH5A==,type:comment]
-    VIP: ENC[AES256_GCM,data:JkRjjGBrZBC6Y81kNA==,iv:EHUhNiB2v+qEuDYmXXJ+69Yqj68ovlcWm/e2nWLuuQI=,tag:OUuUaGXEz/rO9DCk0LMcxQ==,type:str]
-    #ENC[AES256_GCM,data:9b0a/Dq0q4Jq2a9TAvCw1VPYgn0I+D7qT1uz,iv:S89cWLwO0H+H2bGpY8BrPLm0gpFZct7b/R/f5LyQrDo=,tag:CGUzVWOjtmipTNCwblGjNQ==,type:comment]
-    #ENC[AES256_GCM,data:xtjT0NoaSFHrN8PVmLbfjekBjfHIzDz1NHcLQSwwXuXnf/WELRHN2d3g9H3G5IHXMICRaEh+QxvWMymz/7DagWxYQ9zKKov+QMr0/TiAWgjubF9jzPbrxzA=,iv:C2xBBksZchy2GPq6czm98AemPrxVv8UsyFTeEzWWVfk=,tag:bR5w7QAuL5kN925ShXGY2g==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:MsoRaLCiEAiB9FDapGw=,iv:MY7UJyw+QIBlfZBZ+Jcwj/vSQt/Nw9sNGxOMHyBTIF4=,tag:QEBpreUBWoNLSrBFiEPFXg==,type:str]
-    #ENC[AES256_GCM,data:lGq2y0sK99EFDOLFTSV/JspvtOAUIw3Vwy+evHeS3Sw+IQ==,iv:P2/r2YEUceAqhh0OLU4yfsoNKjMHK9gldFr8FZHufuo=,tag:He3gqa93gB16uxAJ5VwxgA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:SCKC6IsQT9OJg4Wyag==,iv:/Ym4z8KpCfy6K+SJmFabK2u7blVlUGmRvD0kyU+Osh4=,tag:jTwnLCl5swHNr1u8D04GLA==,type:str]
-    #ENC[AES256_GCM,data:QpdKmGkyIm71nMDtgTYa9grkG3qCLuN9x+Ajg7i4ZZXmYUfmR5AsaI57zw14ggo=,iv:mxGdHIF5w0XqIGYlJtp5KRGBO0n/hF+0Sz0e2P8ViEM=,tag:jWKJfw9xix+WbUrzrtcekA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:pRHP57Lap982pzdcTVoN1V2enU06ArI37P78YrDgjg==,iv:6Up4PRrmjLJ/MnyfmUPHQ7yGzLJC7FrYCFw9XIa91XE=,tag:pslTKk7cd2nDqxHZOxa0kA==,type:str]
-    #ENC[AES256_GCM,data:OM0EnXfSZ1mou0vKEa2FNExQbEvlUeglE3CcesyAAxHfMN8FdInhBXL/m+ebGr1IIAs0U+3nmYX/XRB1kJPBh0q4XDAliPo3/ysE7oM4odBSrg==,iv:DEejiPH7JFGccr6fjm11XfCM7owWxCBkzdaxiFSM9K8=,tag:GBdMGhYVTzN533ZE0DzJjA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:FodWBG8kePAMO3ipx3Vy,iv:0ktw/W/29C7JdyO5uIcBR+1yyai9h/aCXBIJxNfcytY=,tag:4BMuPuq13zNSKdFVMGGTCg==,type:str]
-    #ENC[AES256_GCM,data:ADfNcRI9Edhcmgde5EN/rHpolwmO8s9fcpIEOTPbVm/X,iv:PxQDxZp7qvNC0Ygh6L56GV3JSPD9fiIMMCWOfA29MfA=,tag:v7eBBrlRi1FvPSzo/eWOXg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:8+TBto0YInVQQav2rP3c,iv:RiaHXZVnWa91uE5+cazLsVrtbXABzDbdZZhiGXnVeek=,tag:G+GwfIxMjWGl97ff5xefkQ==,type:str]
-    #ENC[AES256_GCM,data:tBkQpmejkfkdb+uDLnRuuCzAjSLvKfV9Y48l8Nk153DPVw+vEbK6FBUkKqemfwQVDOcPdmA/R7QYeSgpXMdx4YnZWBrldbqpP0fnoGObZxw=,iv:71155uYaoxHJSnou7tLnD05x7FD6mFOPupQBgCxK0oQ=,tag:sJJ9HFQUVEECQdGoxCZ6Gw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:+yyrEVr+fPGmjL9hXKhm,iv:oscGvQeXYajfK6kQX+KatzX5pONSOcDlMZAWVuweep4=,tag:h/7DKxOGp16717MXVPka7A==,type:str]
-    #ENC[AES256_GCM,data:XpIOg8VZT9S9sNbgzrtGAYhJpctXFXn9dcKGqw9qmces+vMr6nk+Fwa/tKkxyMBeLG3OWoXR+udM1x23NSTmOhKl+38wQnqjUErTv7AxL2Kn5B2OoE4U,iv:dz+jtdgY/j0JYmUm62Exwawspkv9my4axJtVusISVFM=,tag:PiQBkXjq+/CW7rvit6NwXg==,type:comment]
-    #ENC[AES256_GCM,data:vZCIkX/UjhmECCLZQqw7A0futaNDekNJvYXxHQ/KGSSMU7oVGFqIsvKOxgIe/nCPS9Rrsgy9iqIkvyQNPvYwnmWcNqrs3f6ml4sFlMo1tRbQhTx59aD7owUHrzkzGdafnHw3GI14kNpPzQEiNBcPy5HMAmXvuR+08j87cA==,iv:YuWRjvRd7zU1+N9ShosXjCNa1wke2L3G6AhKLvb0njc=,tag:jNCYNXcGu3xlcoJZdzjICg==,type:comment]
-    #ENC[AES256_GCM,data:HYS8YuRjLn0jrDl1UGDFQhoUK/QW6LFQKGHAWVtcirEvE1oVvYqs1FwisvnSmFFqZLqGVoce6spt3uDlsdcR2rmpWwNw24SCGeSPY2qqfkw=,iv:/t5VOyzIZruYR9ObAEuF73299mt3mJSOJLQaYCCMin0=,tag:7GD9D8ti0KmNgTgLSXa9kQ==,type:comment]
-    #ENC[AES256_GCM,data:MemRSYpNJH7/6F/SN26abO3exCeIQPQ8Ca+VDU8smb9Luc0XHlmLTbqgBwbhp3hqW7P3yF0e,iv:0TZC0nJ8LpkUQpb9UmOZofiZUGz9DmiWEUbDHmBjIBM=,tag:GQhtjTlGA/YdpVdxw5XwGA==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:Sr2VAldDjgAOWhmGDi8=,iv:pqCOI5mGnt6AbuuAwx4/LyIHe5VJgI3UPxUVNZ4aBNo=,tag:z8iLSsCI0f69WXQlTFnxnQ==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:hVVFtNrUcsUtjFzA,iv:SDbh8G80JjxLD/5Sf2EA2iGy08HYPuviervIvM4s7qY=,tag:tJ9/YDhaHdPCbtTaEZV07Q==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:lW/FHFN2cb1dhBYtmKgAJkc=,iv:ulBwRX0B4G6NVGC/aS4ntPslm04GbKJiovpW1wrs2Zw=,tag:h1ZW7bROiCTzWr1DKJSQog==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:F2W2xhI/qc9IAAsXjXY78VrALgDQMB8Oc7QbwSOI/2gGOxaJRl4tew==,iv:QV+PvaLPkZKM9ugam9+AaS/A6X4TfexT3C2qnDtRbG0=,tag:IUiCRLIbTYPSjMRnvjBgzQ==,type:str]
-    #ENC[AES256_GCM,data:pErLALptD3n3gxQrDhz1AwJb0MHGypfXFmdldmnfTnOp3/x7aXrZ3rL22M3miydD2ocZ2etr68A=,iv:7svg5uODJ6c/phgFQ5f0C1g1KsTTcqwVO2j9Ho4DoOc=,tag:IoUQeW5PUmGU50FicM4nTQ==,type:comment]
-    #ENC[AES256_GCM,data:3vzgF/N3UwEK64eXb254NLQvzyNNxgj9GA==,iv:OzU1ux3RCTrGT4Swhgbml/o66UtNYC2J7biDFJ804zw=,tag:KuR3cJRZHLc29asVb++iOQ==,type:comment]
-    #ENC[AES256_GCM,data:hEMn5ct1wHYQ5sya9f+D8/EBQA7pq+Gc8QZmmYY2WZ8cuBl07mYH6TjxgQcn7poHh0cFWkidQm472lGK+KiV8trxhzPjI8KngTFeN9Y=,iv:yl0XVLpVAGd5ZEd+U3nfeJwFFQGi9XdP/gu46G9e0vM=,tag:LjLquXCjnrDbwfIA4F9acA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8pQM0BdZLXS++/yYmZZFWY/MAXDvW4cdPihoKW/ekboEeXXW+bPzDxSI/Z0WJAFn,iv:ui8wxCmsrZrtDRn2DViWSYQXIw97UZtO9ncEUChz7uM=,tag:PdwL7gibWzDWwquji2ZVvw==,type:str]
-    #ENC[AES256_GCM,data:co6GUzs/1T3hKcMg2sfLckh5IB9juIkgbJq4GuwGItLNslFa9KGaNPoT52YflkV3ZFdD2nx49kYR+yJbsnv44Ey8+w+FkHA=,iv:7nhnGHdwzgKVtvdn4PE4x+aGh7SoLUHLUrSD8FL+sOo=,tag:1js7TANB5cTq/QH4V7vtcA==,type:comment]
-    #ENC[AES256_GCM,data:xE9H7OtbyKkZxEoqTXJ8qO03qIGA8NBD71fibBqc0I60HxQJNiRl30ldjJzP1apPIZ+dN6eN,iv:ZWPxrl3VVXigJ69Ve1rYXJ77LbnUlvalWF1w/cs/CyM=,tag:EsXcwGlpkOF28rDNpSBhGQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:1vb0GjC0yA==,iv:0dGg+hLwhFgtlYLgtsUIkNjiGeJcfbP/k9szCubJQqw=,tag:Sx7tUsXztY66uraUMOpIIw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vx1jKARzgVTSwpsQLdjNqpL6CtE=,iv:FPBwwgfFgqP6FjKSSKvQbcUUyzG6YjmV/xZydLaJSdU=,tag:YvlesvtBPFvC0wFCjXElsw==,type:str]
-    #ENC[AES256_GCM,data:EFSScgyZbZa/EJC9Tc8=,iv:vOob75Ao23QXnFPHftn21QmR0C99Syob4pb09pXBNUk=,tag:Y+c49/4Wl9jBor8En+USdA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:4EjvaMM6oiWQ2jQVEg==,iv:cH3dNgefLrpNsKQE/XBqglD/kkdGj0w0w4cGMYaSth0=,tag:V/y7vKJ5QCyGPVeLtXYVaA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Bes/OYFPOBlZ/tZxlA==,iv:W+7dsdMCVJjSgbM62P/pwXLOIj2wwukx4KWJt29/Cls=,tag:DusSl+pgiBwz9ynXclretQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:CkYh1g==,iv:Hyt/qJT5nW5IAsWy3sp/P4iar359ONprA8aTzyTn6MM=,tag:lN2GnZa36NgguQ0cyh01cw==,type:str]
+    #ENC[AES256_GCM,data:6NKi/wIiWc4Dsy7MFCiloOX10UMmUHRbWfn8iJVuG9MTIIns+X05wuzc8DTsFTJVtYpwUgRm6rtYv/Y8HbYPa1o=,iv:ZFdj1kyiDkGTTKMWxCIb+A/4DsAGL0/rOjnHv+dwwGQ=,tag:Q8FOxWqmroHcqyoJOSc6dQ==,type:comment]
+    #ENC[AES256_GCM,data:Ypu/pEWfZDNbtxZ141iJpYxG+yu900qnoP6R//Oq3qEg4xNf+ovC4amhdPQ=,iv:WH0IafJJ+BtD/oL3pcMxSnH6w2wmESxLMJzPDJkfLho=,tag:oNkedca6GVnw/GAWQRUzxg==,type:comment]
+    VIP: ENC[AES256_GCM,data:Mt1ZbgKR5ST0siGtCg==,iv:zf1ooGYlEJFD79wVtlKhM/H24FCnpErC1SQ+7q1gozA=,tag:yZKxx7aO7w686iHPGkZ0AA==,type:str]
+    #ENC[AES256_GCM,data:PeSQRF8Dfs3cYQS5T/pyeNJ4U+2PiCXab2rD,iv:/Gbsr0q0GONTM4S1vi7gNBJivmoC7BXz6mvhT/8PV5Y=,tag:B/OTjkLwFDXbDtDLL8hY4Q==,type:comment]
+    #ENC[AES256_GCM,data:nSTVgUDXkmRN/TNo6Ajih1lqOWZAclJg9UanREJSlypTIMaM8fYY4xPY0KkYt/NLHo9IXK2qHDj4ELu8MJ55pNaZJXtHRB/bmRh+2OXmD/E4CXMU7tB8/W4=,iv:PI+CyFcOnTUUV5Iyr7Gwmk5yqiy+kjrVOcxm9lLzy30=,tag:EWI9SESdVBmCG1oOcKozIg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:XBZkpGmbzA+YRz/ynOg=,iv:k8b8z9w1vysEKHskOBo6ooD5F5D/H7LjJ7wOZjnQD+4=,tag:ho6asEGcc3reh5OEy5zD8w==,type:str]
+    #ENC[AES256_GCM,data:sZ6VjElfjJ4ex7s6VXa+bDnmuwtdX0xdInNCJLpvls0haA==,iv:3HJjI3lixLxUWBPfUiD1vENx/ChvvellcZzaJVDgzig=,tag:DzHfjrMq1H+u1vURjyjakg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:PF6hmuYrhtXleXiCFA==,iv:i1UU6dZtTgCw8s2K9wUQArolV6f1cHlbAA4Z9vC3rG4=,tag:qn7tPds31GyWIrAqOUmcnQ==,type:str]
+    #ENC[AES256_GCM,data:zwlkoblXmBTUpjFfI5d/8mA8wTWxA9ESOF1r/RMtom2MdUFiXNmp8rwGBs6877g=,iv:msD5xs0Kpx/W/+tIpUrXHzKZjjSKCH7zrwkek53SJs8=,tag:ND4RY5qt2Vba//F5OF103A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:BRwTBkJNG6NcHNgBafKY3dMhH8cn/3u0ovqsWJhdeQ==,iv:10MGJSBYoL7bNexy3L4ILuTCAGVhlpTMqnWKFUX1CoA=,tag:sYFZ/oRxdnTLmLySNru7wQ==,type:str]
+    #ENC[AES256_GCM,data:LdAGvDMnyGkwtACpoeVs5Xa4jMhBBhSXHAoQd6MuTJsrQyJ63RGy0db3b/XIS12Gldtbf59oIooTwLenQlMwOHIJzb9VwZQBDc/sItKUGPmTZw==,iv:XKjsdK4Kmetan4uxb7po+CXJOZs6tkRELxooBWX00fs=,tag:ko0xgihM6ExLn/KHmmmDvg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:Vk8Q48x1i29Ht2nViK+s,iv:QhpzFFxJY9ZAbxjo8HljLtgpC94DLVxa/R8X8JtzzQc=,tag:dZErG/divnmgVHJYkT9CUw==,type:str]
+    #ENC[AES256_GCM,data:jZsAeTSUimmjdZOepsDaps0scC1W3+K8ou+6+DkcvfEw,iv:oK9H/81ShBfgJsXg3vvspfjXd7xfOmccTBPfZhp/KjA=,tag:wyo8e0MlxeCQjYdW1XOWyA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:/hWnmhNSQBaRlaUX/S+Q,iv:xv5xsM97kn2mkR3tW9anQsMIBldjSRs/ea3SFj5LVRg=,tag:duXo5JFSkYM9XOD7FLEAaA==,type:str]
+    #ENC[AES256_GCM,data:1ZlzRkC8lYeWe+h4NjMt8v14X3tqOp+h1a5HvoRvWDUxPn5xe+MlVjuEYw/NYe3RzwE88DORyxIcZKh5UEnlkFHkrb6hWIFoS91GHi7rKvU=,iv:effrHN1IUd8ZoV1BtcP0bOFLWkG/JZVeo6D54P1ximw=,tag:8DyeQFDJTVK+gGKj18weXA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:9UhZAWDevd3wKIF2SKZO,iv:N7cLlLWjqI/5Qo7Vy/bZWwOL9YvHnQBELIsw05okxig=,tag:24DXUGHJGdZPBvpGEo3SOg==,type:str]
+    #ENC[AES256_GCM,data:FeEr7fHpFknm5q3x4IQpbPRC5V+AlkAAIBwqmQfnKo21KZaHD16aclb2rTjanKPQXDLFTBuhM0TUIQNB909XD7GYJCggxL/1/D/XHeIdLVEo71t6GGfx,iv:vWU0UO/VJbuuY5tZj+TYFCfwYi9qOcPYecJiBGhhgL4=,tag:z6fgyGcP3b44tYqep6pUkw==,type:comment]
+    #ENC[AES256_GCM,data:nll9JmsCD/pCJ93oFQrUV5tAzhBGg/9hB1q1V3bgFrtDf0Km1vNkS+RzrKNTjFpxym25AKhTjdT2bqr/GTph4dkFWdy2nboslP06GCsiedOe500p1K0dP5ggX6nqbUcUy1sQFyo01IWe1LI/tlbW+7gk8u5ide9lYPiPyg==,iv:KPPZ9kQOkolgAAroN0n5fZibZkujla/VWOX4jTf3LN8=,tag:pFJRtxIRoaiE4PGfD8qp+Q==,type:comment]
+    #ENC[AES256_GCM,data:jiUrCCS2z8bPop0jS7U49M4o3hCq5rhetStUPFo3vPdSQmcmOKnzd/3bHiLiasTkcrL6RAyVHqo3zR+IVWwE6phHHatGucWMSDjGZ43+KpM=,iv:ALYQJs0p1BgmHvKMmaLyShpBIM/SmFmTqbmMGR/ZTpc=,tag:UQJ1gs73x2NQLon/4RXeeA==,type:comment]
+    #ENC[AES256_GCM,data:vCXMiMIBeeDrjKv9oGyeaXdc6MVjIA1/vs6AxJlRF0N3YqeSDMzbfJxDHXd8TlBYO69UmgD5,iv:XdLkouGiBuaXt93UvSklOZjl1xVVvqdOW/waZ+aTU8I=,tag:h80kONQrJUsh0bVHSNVwCQ==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:PIoVMHYBgJNYKygsiV8=,iv:kTBPNcucujSOHFAWXUAUC8U5/Qr/A5w2QHSjrKE7bJc=,tag:Uual/6DfYDy0sSGr/+miwg==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:0hVeku7MDNZnYXjV,iv:PcqBO2fWO+g3S4tHpQH5wHFrdzE3xWdd0WjkIlY2Lug=,tag:/IhhWuCmD+rzXVj1aBlqoQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:8zJiPymwta33h4Fz4rOrOcI=,iv:GkSipvTYjJE0gEdlCsCim6KVBAf/ud8kjaMWYATKcM4=,tag:edG6NfeMgnbbk3xeCt+8KA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:pdkn/+G1C7cpO3op5QZ5ZiM9gD/+If7lSFBDbG/K/oEAgS1HSPEQ/Q==,iv:qeGgUATBl8WBmYfalVth+llOFDLL3wMw9FPwMytioTc=,tag:OzULvjNCPL243txdhLzNYQ==,type:str]
+    #ENC[AES256_GCM,data:jp914XFOh+KlmQRXlEPyNE/s/GvwTJOtdnH4qgxSrTkNMLuDC3djmUnDRTEyyQ0HFKmkpveu8yE=,iv:Y+MRFNYzTo7NJujbKf3baALhj1ZH73Lx1+1B5oBTjcc=,tag:HFpJpGzU994a2Urn5QQngw==,type:comment]
+    #ENC[AES256_GCM,data:aq6Dy591U3FePOZ60Y+XDOtgCk5Fb7kOtQ==,iv:Ii1r1mXmrvaux+rzvghSzWD9QWPeLYVfAy3DLj2snQo=,tag:xVHKm6/mDO0Nap2SZmbqLg==,type:comment]
+    #ENC[AES256_GCM,data:X63oSUdiJasKd7wvrLZMK9Vz6RBnm9FAMDd67ZrgbPLtk73kxehO4qzCRJ4f+cfkcDVuDHOuUMSltnCts6W244zhHbLOSWQG5nFXgME=,iv:a0T6Crmu5Sd4Ec4PqX+2kd6H00D2vVrmEISbJjxkLzI=,tag:gb5NAUjKz2NHRGivxgb4Yw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YTQT7QhaNT35X1b/mILdz4iWOZitYLMg8LAxE4QVkDKkSorKkFFzvXBNR2StefaP,iv:vooyn+zKYLrQIjt0mX3Z459exstipkZwq77JPsbOHWg=,tag:VmkQSaGcW8b5+rlPaw4QVw==,type:str]
+    #ENC[AES256_GCM,data:69vpXOuBjLwQc0vz5TvSAnYXq+gDw5LXw/ocRYXzV1kJlA5KlboqbdGKghiF9zHPrOCiyvvntF8H3WiSzVZZ2QmuxD46H/g=,iv:jUoG67GZePaq6rfjKZOjo0O/8DLKzc+7hILinhRxuzo=,tag:prSUpI913MBiJizTvxGmWQ==,type:comment]
+    #ENC[AES256_GCM,data:Cr4ZyhzlxtSIRr4BUgiTIFbUnFyeQT1GNkgTPROLZHSqbxmcTbmiMGx18tK0umF74VZO6o+j,iv:cdEJbXWEuCgmMaOYISKwD+08A/rxi7I2/3UyDKLV+O0=,tag:jbRFDVdLdjKQRvcWba4DZQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:mrGO29Y0+A==,iv:wmfOXcW+K8Fj6KZAH+wTCagoHAZHbbkebD/ZxGPLrdM=,tag:NC1UUtOA3gytwNM6qSR4Mg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:iJPdx95EYTW0v5oagmc+JWX0avw=,iv:GIbWCO/7VFTWyZaeVq5VYQkKzgAHe6buJMQjZW6nGmk=,tag:IiMwCNe+0HDhPxlFU8In5g==,type:str]
+    #ENC[AES256_GCM,data:kB5QlHRckfZdAHSDuYY=,iv:m2kqV7JKoRjQwfjpua1tGHdUtu8E1HJDY4UQBX7obTo=,tag:LNCMycCOeOdqfp0AMsMOfQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:VLqfOm778sPnwe4zIQ==,iv:uwNgfY13Eopa/Cgl5H7LqjCcPjHPDPtpeLvXvkuYDP8=,tag:dWdSHmVKOQ8ur3OxQzUl3w==,type:str]
+    SVCNET: ENC[AES256_GCM,data:TfvSqXlD4ibqQKVD9w==,iv:IlQYYo5u4rxIl632droWYmymE6nr3ez6MLmauwzTebQ=,tag:ZHtnOf/iuVeoH1Wo8Csn0w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:25mq3Q==,iv:eSHsamI+/iLSLjidDxRzzRCkwoV4MZBlcOPcS56QTGg=,tag:PjSp+gZpFUA+x9v4pVpTmA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLem1RSmRKbkh5ZGJkNm1v
-            eTdoTzZPT1RDSkdvU1NGdFphV2NSczUvL1FFCndHUHVRVlZWbjJDTmtISis3THNL
-            QlZVQk9PS3J2cHNlTjRjb2t0QmEzcmcKLS0tIEREWm5tVW5UMW9iZlhCc3kvb28x
-            bXJpYzRVOVZ4YnBXM2pvck1PbzhPOGcKg1b60HRehnGvQbqgdfXogF0sZuQiNQtX
-            cRPkhLFthdTBKqGMYvvg1GAjEZdNxjvDpan5xhSvkB7adxZXKv6djw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MzV1bkYxL1BucmdLa2h2
+            c2ZMTVg4RnNDTm8rNk1BZmNwVytZQUJ5UW5NCnYrdUxjQXpaTU1vOXExYUVpVDZz
+            amVoT1RYOHlRRmJOODAvb3hQTzhaVGMKLS0tIHo3eFlXRGRCSmVSbkQrb1NmUW5M
+            NEdPMlFMK1M2NzNIS21YSnZBbGUwVW8KbXvmX5MqebCs1PaxJx0xWRNF0Aqf0bNG
+            wzchjfuvugZ6rG1IC2DudFxjRbT1GneV4ayxFASPyM2ogm+trAZeiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T01:36:48Z"
-    mac: ENC[AES256_GCM,data:ka1qR/ZpoMZfPHltjdS+mISCpIxUL4DWh1cnFUn2DEHJDIDb2FnIyO+ZTZjDyMlWeRqXB8fubD7KyUXGtaqVX4G89TlEm34zTDUwq91zVJ+0txjXzCe0KJk8noq0xoUWpY+0N8ASgyKoL1rNQ13qGaTNKf8pN5y/ESFfa+fQ2So=,iv:JGKtBdpRb4La7gI9VidhxdwloURNrr1788/S26WBtrI=,tag:Q76f9+/qtZX13QcGFpwU5Q==,type:str]
+    lastmodified: "2024-12-27T15:08:00Z"
+    mac: ENC[AES256_GCM,data:9H4gopzbgjVJ9mfdMN5YSjDHgzqAHU9S5pCwiCZc1kx0IFE/bjQ0H6IRb4iQVIFHBZ1Aml7DuaMtuPPan4nIeR5vK2RPt02VHXZd99mlbBbn7chBxukdk6rVEeh4LgZOkNcWHxpgQBa/rXGIW5wqUKIDcS9besbJ3X6UCTZkH8g=,iv:QR7frr7Plbxew61+v0OEIThlUkHuR3m1sLo6y9zJfwU=,tag:k2owbJjR9y5jWmwKnvItGg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
